# libfido2-rs

./: Cargo.toml  rustfmt.toml
libfido2_sys/: Cargo.toml
libfido2_sys/src/: bindings.rs
src/: assertion.rs  cbor_info.rs  credential.rs  device_list.rs  lib.rs  public_key.rs
