[package]
name = "libfido2-rs"
description = "A safe interface to the libfido2 c library."
version = "0.1.0"
authors = ["PvdBerg1998 <PvdBerg1998@users.noreply.github.com>", "Charles Lien <lienching31240@gmail.com>"]
edition = "2018"
license-file = "LICENSE.txt"
readme = "README.md"
repository = "https://github.com/lienching/libfido2-rs"
categories = ["authentication", "api-bindings", "cryptography", "hardware-support"]

[badges]
maintenance = { status = "actively-developed" }

[workspace]
[dependencies.libfido2_sys]
path = "./libfido2_sys"
# TODO: publish FFI bindings as a crate

[dependencies]
bitflags = "^1.1.0"
